; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsdate.c_jsB_initdate.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsdate.c_jsB_initdate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_11__* }
%struct.TYPE_11__ = type { %struct.TYPE_9__ }
%struct.TYPE_9__ = type { i64 }

@.str = private unnamed_addr constant [23 x i8] c"Date.prototype.valueOf\00", align 1
@Dp_valueOf = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [24 x i8] c"Date.prototype.toString\00", align 1
@Dp_toString = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [28 x i8] c"Date.prototype.toDateString\00", align 1
@Dp_toDateString = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [28 x i8] c"Date.prototype.toTimeString\00", align 1
@Dp_toTimeString = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [30 x i8] c"Date.prototype.toLocaleString\00", align 1
@.str.5 = private unnamed_addr constant [34 x i8] c"Date.prototype.toLocaleDateString\00", align 1
@.str.6 = private unnamed_addr constant [34 x i8] c"Date.prototype.toLocaleTimeString\00", align 1
@.str.7 = private unnamed_addr constant [27 x i8] c"Date.prototype.toUTCString\00", align 1
@Dp_toUTCString = common dso_local global i32 0, align 4
@.str.8 = private unnamed_addr constant [23 x i8] c"Date.prototype.getTime\00", align 1
@.str.9 = private unnamed_addr constant [27 x i8] c"Date.prototype.getFullYear\00", align 1
@Dp_getFullYear = common dso_local global i32 0, align 4
@.str.10 = private unnamed_addr constant [30 x i8] c"Date.prototype.getUTCFullYear\00", align 1
@Dp_getUTCFullYear = common dso_local global i32 0, align 4
@.str.11 = private unnamed_addr constant [24 x i8] c"Date.prototype.getMonth\00", align 1
@Dp_getMonth = common dso_local global i32 0, align 4
@.str.12 = private unnamed_addr constant [27 x i8] c"Date.prototype.getUTCMonth\00", align 1
@Dp_getUTCMonth = common dso_local global i32 0, align 4
@.str.13 = private unnamed_addr constant [23 x i8] c"Date.prototype.getDate\00", align 1
@Dp_getDate = common dso_local global i32 0, align 4
@.str.14 = private unnamed_addr constant [26 x i8] c"Date.prototype.getUTCDate\00", align 1
@Dp_getUTCDate = common dso_local global i32 0, align 4
@.str.15 = private unnamed_addr constant [22 x i8] c"Date.prototype.getDay\00", align 1
@Dp_getDay = common dso_local global i32 0, align 4
@.str.16 = private unnamed_addr constant [25 x i8] c"Date.prototype.getUTCDay\00", align 1
@Dp_getUTCDay = common dso_local global i32 0, align 4
@.str.17 = private unnamed_addr constant [24 x i8] c"Date.prototype.getHours\00", align 1
@Dp_getHours = common dso_local global i32 0, align 4
@.str.18 = private unnamed_addr constant [27 x i8] c"Date.prototype.getUTCHours\00", align 1
@Dp_getUTCHours = common dso_local global i32 0, align 4
@.str.19 = private unnamed_addr constant [26 x i8] c"Date.prototype.getMinutes\00", align 1
@Dp_getMinutes = common dso_local global i32 0, align 4
@.str.20 = private unnamed_addr constant [29 x i8] c"Date.prototype.getUTCMinutes\00", align 1
@Dp_getUTCMinutes = common dso_local global i32 0, align 4
@.str.21 = private unnamed_addr constant [26 x i8] c"Date.prototype.getSeconds\00", align 1
@Dp_getSeconds = common dso_local global i32 0, align 4
@.str.22 = private unnamed_addr constant [29 x i8] c"Date.prototype.getUTCSeconds\00", align 1
@Dp_getUTCSeconds = common dso_local global i32 0, align 4
@.str.23 = private unnamed_addr constant [31 x i8] c"Date.prototype.getMilliseconds\00", align 1
@Dp_getMilliseconds = common dso_local global i32 0, align 4
@.str.24 = private unnamed_addr constant [34 x i8] c"Date.prototype.getUTCMilliseconds\00", align 1
@Dp_getUTCMilliseconds = common dso_local global i32 0, align 4
@.str.25 = private unnamed_addr constant [33 x i8] c"Date.prototype.getTimezoneOffset\00", align 1
@Dp_getTimezoneOffset = common dso_local global i32 0, align 4
@.str.26 = private unnamed_addr constant [23 x i8] c"Date.prototype.setTime\00", align 1
@Dp_setTime = common dso_local global i32 0, align 4
@.str.27 = private unnamed_addr constant [31 x i8] c"Date.prototype.setMilliseconds\00", align 1
@Dp_setMilliseconds = common dso_local global i32 0, align 4
@.str.28 = private unnamed_addr constant [34 x i8] c"Date.prototype.setUTCMilliseconds\00", align 1
@Dp_setUTCMilliseconds = common dso_local global i32 0, align 4
@.str.29 = private unnamed_addr constant [26 x i8] c"Date.prototype.setSeconds\00", align 1
@Dp_setSeconds = common dso_local global i32 0, align 4
@.str.30 = private unnamed_addr constant [29 x i8] c"Date.prototype.setUTCSeconds\00", align 1
@Dp_setUTCSeconds = common dso_local global i32 0, align 4
@.str.31 = private unnamed_addr constant [26 x i8] c"Date.prototype.setMinutes\00", align 1
@Dp_setMinutes = common dso_local global i32 0, align 4
@.str.32 = private unnamed_addr constant [29 x i8] c"Date.prototype.setUTCMinutes\00", align 1
@Dp_setUTCMinutes = common dso_local global i32 0, align 4
@.str.33 = private unnamed_addr constant [24 x i8] c"Date.prototype.setHours\00", align 1
@Dp_setHours = common dso_local global i32 0, align 4
@.str.34 = private unnamed_addr constant [27 x i8] c"Date.prototype.setUTCHours\00", align 1
@Dp_setUTCHours = common dso_local global i32 0, align 4
@.str.35 = private unnamed_addr constant [23 x i8] c"Date.prototype.setDate\00", align 1
@Dp_setDate = common dso_local global i32 0, align 4
@.str.36 = private unnamed_addr constant [26 x i8] c"Date.prototype.setUTCDate\00", align 1
@Dp_setUTCDate = common dso_local global i32 0, align 4
@.str.37 = private unnamed_addr constant [24 x i8] c"Date.prototype.setMonth\00", align 1
@Dp_setMonth = common dso_local global i32 0, align 4
@.str.38 = private unnamed_addr constant [27 x i8] c"Date.prototype.setUTCMonth\00", align 1
@Dp_setUTCMonth = common dso_local global i32 0, align 4
@.str.39 = private unnamed_addr constant [27 x i8] c"Date.prototype.setFullYear\00", align 1
@Dp_setFullYear = common dso_local global i32 0, align 4
@.str.40 = private unnamed_addr constant [30 x i8] c"Date.prototype.setUTCFullYear\00", align 1
@Dp_setUTCFullYear = common dso_local global i32 0, align 4
@.str.41 = private unnamed_addr constant [27 x i8] c"Date.prototype.toISOString\00", align 1
@Dp_toISOString = common dso_local global i32 0, align 4
@.str.42 = private unnamed_addr constant [22 x i8] c"Date.prototype.toJSON\00", align 1
@Dp_toJSON = common dso_local global i32 0, align 4
@jsB_Date = common dso_local global i32 0, align 4
@jsB_new_Date = common dso_local global i32 0, align 4
@.str.43 = private unnamed_addr constant [5 x i8] c"Date\00", align 1
@.str.44 = private unnamed_addr constant [11 x i8] c"Date.parse\00", align 1
@D_parse = common dso_local global i32 0, align 4
@.str.45 = private unnamed_addr constant [9 x i8] c"Date.UTC\00", align 1
@D_UTC = common dso_local global i32 0, align 4
@.str.46 = private unnamed_addr constant [9 x i8] c"Date.now\00", align 1
@D_now = common dso_local global i32 0, align 4
@JS_DONTENUM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @jsB_initdate(%struct.TYPE_10__* %0) #0 {
  %2 = alloca %struct.TYPE_10__*, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %2, align 8
  %3 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %3, i32 0, i32 0
  %5 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %6, i32 0, i32 0
  store i64 0, i64* %7, align 8
  %8 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %9 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %9, i32 0, i32 0
  %11 = load %struct.TYPE_11__*, %struct.TYPE_11__** %10, align 8
  %12 = call i32 @js_pushobject(%struct.TYPE_10__* %8, %struct.TYPE_11__* %11)
  %13 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %14 = load i32, i32* @Dp_valueOf, align 4
  %15 = call i32 @jsB_propf(%struct.TYPE_10__* %13, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %14, i32 0)
  %16 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %17 = load i32, i32* @Dp_toString, align 4
  %18 = call i32 @jsB_propf(%struct.TYPE_10__* %16, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0), i32 %17, i32 0)
  %19 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %20 = load i32, i32* @Dp_toDateString, align 4
  %21 = call i32 @jsB_propf(%struct.TYPE_10__* %19, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.2, i64 0, i64 0), i32 %20, i32 0)
  %22 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %23 = load i32, i32* @Dp_toTimeString, align 4
  %24 = call i32 @jsB_propf(%struct.TYPE_10__* %22, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.3, i64 0, i64 0), i32 %23, i32 0)
  %25 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %26 = load i32, i32* @Dp_toString, align 4
  %27 = call i32 @jsB_propf(%struct.TYPE_10__* %25, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.4, i64 0, i64 0), i32 %26, i32 0)
  %28 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %29 = load i32, i32* @Dp_toDateString, align 4
  %30 = call i32 @jsB_propf(%struct.TYPE_10__* %28, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.5, i64 0, i64 0), i32 %29, i32 0)
  %31 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %32 = load i32, i32* @Dp_toTimeString, align 4
  %33 = call i32 @jsB_propf(%struct.TYPE_10__* %31, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.6, i64 0, i64 0), i32 %32, i32 0)
  %34 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %35 = load i32, i32* @Dp_toUTCString, align 4
  %36 = call i32 @jsB_propf(%struct.TYPE_10__* %34, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.7, i64 0, i64 0), i32 %35, i32 0)
  %37 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %38 = load i32, i32* @Dp_valueOf, align 4
  %39 = call i32 @jsB_propf(%struct.TYPE_10__* %37, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.8, i64 0, i64 0), i32 %38, i32 0)
  %40 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %41 = load i32, i32* @Dp_getFullYear, align 4
  %42 = call i32 @jsB_propf(%struct.TYPE_10__* %40, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.9, i64 0, i64 0), i32 %41, i32 0)
  %43 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %44 = load i32, i32* @Dp_getUTCFullYear, align 4
  %45 = call i32 @jsB_propf(%struct.TYPE_10__* %43, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.10, i64 0, i64 0), i32 %44, i32 0)
  %46 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %47 = load i32, i32* @Dp_getMonth, align 4
  %48 = call i32 @jsB_propf(%struct.TYPE_10__* %46, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.11, i64 0, i64 0), i32 %47, i32 0)
  %49 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %50 = load i32, i32* @Dp_getUTCMonth, align 4
  %51 = call i32 @jsB_propf(%struct.TYPE_10__* %49, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.12, i64 0, i64 0), i32 %50, i32 0)
  %52 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %53 = load i32, i32* @Dp_getDate, align 4
  %54 = call i32 @jsB_propf(%struct.TYPE_10__* %52, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.13, i64 0, i64 0), i32 %53, i32 0)
  %55 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %56 = load i32, i32* @Dp_getUTCDate, align 4
  %57 = call i32 @jsB_propf(%struct.TYPE_10__* %55, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.14, i64 0, i64 0), i32 %56, i32 0)
  %58 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %59 = load i32, i32* @Dp_getDay, align 4
  %60 = call i32 @jsB_propf(%struct.TYPE_10__* %58, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.15, i64 0, i64 0), i32 %59, i32 0)
  %61 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %62 = load i32, i32* @Dp_getUTCDay, align 4
  %63 = call i32 @jsB_propf(%struct.TYPE_10__* %61, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.16, i64 0, i64 0), i32 %62, i32 0)
  %64 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %65 = load i32, i32* @Dp_getHours, align 4
  %66 = call i32 @jsB_propf(%struct.TYPE_10__* %64, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.17, i64 0, i64 0), i32 %65, i32 0)
  %67 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %68 = load i32, i32* @Dp_getUTCHours, align 4
  %69 = call i32 @jsB_propf(%struct.TYPE_10__* %67, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.18, i64 0, i64 0), i32 %68, i32 0)
  %70 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %71 = load i32, i32* @Dp_getMinutes, align 4
  %72 = call i32 @jsB_propf(%struct.TYPE_10__* %70, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.19, i64 0, i64 0), i32 %71, i32 0)
  %73 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %74 = load i32, i32* @Dp_getUTCMinutes, align 4
  %75 = call i32 @jsB_propf(%struct.TYPE_10__* %73, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.20, i64 0, i64 0), i32 %74, i32 0)
  %76 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %77 = load i32, i32* @Dp_getSeconds, align 4
  %78 = call i32 @jsB_propf(%struct.TYPE_10__* %76, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.21, i64 0, i64 0), i32 %77, i32 0)
  %79 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %80 = load i32, i32* @Dp_getUTCSeconds, align 4
  %81 = call i32 @jsB_propf(%struct.TYPE_10__* %79, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.22, i64 0, i64 0), i32 %80, i32 0)
  %82 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %83 = load i32, i32* @Dp_getMilliseconds, align 4
  %84 = call i32 @jsB_propf(%struct.TYPE_10__* %82, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.23, i64 0, i64 0), i32 %83, i32 0)
  %85 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %86 = load i32, i32* @Dp_getUTCMilliseconds, align 4
  %87 = call i32 @jsB_propf(%struct.TYPE_10__* %85, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.24, i64 0, i64 0), i32 %86, i32 0)
  %88 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %89 = load i32, i32* @Dp_getTimezoneOffset, align 4
  %90 = call i32 @jsB_propf(%struct.TYPE_10__* %88, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.25, i64 0, i64 0), i32 %89, i32 0)
  %91 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %92 = load i32, i32* @Dp_setTime, align 4
  %93 = call i32 @jsB_propf(%struct.TYPE_10__* %91, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.26, i64 0, i64 0), i32 %92, i32 1)
  %94 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %95 = load i32, i32* @Dp_setMilliseconds, align 4
  %96 = call i32 @jsB_propf(%struct.TYPE_10__* %94, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.27, i64 0, i64 0), i32 %95, i32 1)
  %97 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %98 = load i32, i32* @Dp_setUTCMilliseconds, align 4
  %99 = call i32 @jsB_propf(%struct.TYPE_10__* %97, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.28, i64 0, i64 0), i32 %98, i32 1)
  %100 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %101 = load i32, i32* @Dp_setSeconds, align 4
  %102 = call i32 @jsB_propf(%struct.TYPE_10__* %100, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.29, i64 0, i64 0), i32 %101, i32 2)
  %103 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %104 = load i32, i32* @Dp_setUTCSeconds, align 4
  %105 = call i32 @jsB_propf(%struct.TYPE_10__* %103, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.30, i64 0, i64 0), i32 %104, i32 2)
  %106 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %107 = load i32, i32* @Dp_setMinutes, align 4
  %108 = call i32 @jsB_propf(%struct.TYPE_10__* %106, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.31, i64 0, i64 0), i32 %107, i32 3)
  %109 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %110 = load i32, i32* @Dp_setUTCMinutes, align 4
  %111 = call i32 @jsB_propf(%struct.TYPE_10__* %109, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.32, i64 0, i64 0), i32 %110, i32 3)
  %112 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %113 = load i32, i32* @Dp_setHours, align 4
  %114 = call i32 @jsB_propf(%struct.TYPE_10__* %112, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.33, i64 0, i64 0), i32 %113, i32 4)
  %115 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %116 = load i32, i32* @Dp_setUTCHours, align 4
  %117 = call i32 @jsB_propf(%struct.TYPE_10__* %115, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.34, i64 0, i64 0), i32 %116, i32 4)
  %118 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %119 = load i32, i32* @Dp_setDate, align 4
  %120 = call i32 @jsB_propf(%struct.TYPE_10__* %118, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.35, i64 0, i64 0), i32 %119, i32 1)
  %121 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %122 = load i32, i32* @Dp_setUTCDate, align 4
  %123 = call i32 @jsB_propf(%struct.TYPE_10__* %121, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.36, i64 0, i64 0), i32 %122, i32 1)
  %124 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %125 = load i32, i32* @Dp_setMonth, align 4
  %126 = call i32 @jsB_propf(%struct.TYPE_10__* %124, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.37, i64 0, i64 0), i32 %125, i32 2)
  %127 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %128 = load i32, i32* @Dp_setUTCMonth, align 4
  %129 = call i32 @jsB_propf(%struct.TYPE_10__* %127, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.38, i64 0, i64 0), i32 %128, i32 2)
  %130 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %131 = load i32, i32* @Dp_setFullYear, align 4
  %132 = call i32 @jsB_propf(%struct.TYPE_10__* %130, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.39, i64 0, i64 0), i32 %131, i32 3)
  %133 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %134 = load i32, i32* @Dp_setUTCFullYear, align 4
  %135 = call i32 @jsB_propf(%struct.TYPE_10__* %133, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.40, i64 0, i64 0), i32 %134, i32 3)
  %136 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %137 = load i32, i32* @Dp_toISOString, align 4
  %138 = call i32 @jsB_propf(%struct.TYPE_10__* %136, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.41, i64 0, i64 0), i32 %137, i32 0)
  %139 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %140 = load i32, i32* @Dp_toJSON, align 4
  %141 = call i32 @jsB_propf(%struct.TYPE_10__* %139, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.42, i64 0, i64 0), i32 %140, i32 1)
  %142 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %143 = load i32, i32* @jsB_Date, align 4
  %144 = load i32, i32* @jsB_new_Date, align 4
  %145 = call i32 @js_newcconstructor(%struct.TYPE_10__* %142, i32 %143, i32 %144, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.43, i64 0, i64 0), i32 0)
  %146 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %147 = load i32, i32* @D_parse, align 4
  %148 = call i32 @jsB_propf(%struct.TYPE_10__* %146, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.44, i64 0, i64 0), i32 %147, i32 1)
  %149 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %150 = load i32, i32* @D_UTC, align 4
  %151 = call i32 @jsB_propf(%struct.TYPE_10__* %149, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.45, i64 0, i64 0), i32 %150, i32 7)
  %152 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %153 = load i32, i32* @D_now, align 4
  %154 = call i32 @jsB_propf(%struct.TYPE_10__* %152, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.46, i64 0, i64 0), i32 %153, i32 0)
  %155 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %156 = load i32, i32* @JS_DONTENUM, align 4
  %157 = call i32 @js_defglobal(%struct.TYPE_10__* %155, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.43, i64 0, i64 0), i32 %156)
  ret void
}

declare dso_local i32 @js_pushobject(%struct.TYPE_10__*, %struct.TYPE_11__*) #1

declare dso_local i32 @jsB_propf(%struct.TYPE_10__*, i8*, i32, i32) #1

declare dso_local i32 @js_newcconstructor(%struct.TYPE_10__*, i32, i32, i8*, i32) #1

declare dso_local i32 @js_defglobal(%struct.TYPE_10__*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
